--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "15.3.2",
     "pg": "^8.16.0",
     "prisma": "^6.7.0",
